--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,7 @@
 # This file lists all individuals having contributed content to the repository.
 
-- [Meriame Melkaoui](https://www.linkedin.com/in/meriame-melkaoui-a6995a265/?originalSubdomain=ma)
-- [Kenrique Ngwa](ngwakenri2016@gmail.com)
+
+Jennifer Huang <133@holbertonschool.com>
+Alexa Orrico <210@holbertonschool.com>
+Joann Vuong <130@holbertonschool.com> 
+Ephraim kuagbedzi <kuagbedziephraim@gmail.com>
